<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/fingerprint_back_ll_img"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.32999998" />


        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_background_oval"
            android:elevation="5dp"
            android:ems="6"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_login" />

        <cyman.libssid.util.CustomTextInputLayout
            android:id="@+id/password_textInput_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"

            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/textinput_bottom_line"
            android:foregroundGravity="center"
            android:gravity="center"
            android:inputType="textCapSentences"
            android:textColorHint="@color/black_input_hint"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <EditText
                android:id="@+id/password_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@null"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:letterSpacing="0.2"
                android:paddingTop="15dp"
                android:textColor="@color/black_input_value"
                android:textSize="15sp"
                android:textStyle="bold" />
        </cyman.libssid.util.CustomTextInputLayout>

        <cyman.libssid.util.CustomTextInputLayout
            android:id="@+id/email_textInput_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:background="@drawable/textinput_bottom_line"
            android:foregroundGravity="center"
            android:gravity="center"
            android:inputType="textCapSentences"
            android:textColorHint="@color/black_input_hint"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/password_textInput_layout"
            app:layout_constraintEnd_toEndOf="@+id/password_textInput_layout"
            app:layout_constraintStart_toStartOf="@+id/password_textInput_layout">

            <EditText
                android:id="@+id/email_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@null"
                android:gravity="center"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingTop="15dp"
                android:textColor="@color/black_input_value"
                android:textSize="15sp"
                android:textStyle="bold" />
        </cyman.libssid.util.CustomTextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>